tests/ui/associated-types/issue-26262.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-26262.rs:7:6
   |
LL | impl<T: Tr> S<T::Assoc> {
   |      ^ unconstrained type parameter
   |
help: make use of the type parameter `T` in the `self` type
   |
LL | impl<T: Tr> S<T::Assoc, T> {
   |                       +++
help: and add it to the struct definition of S as well since it's used in the body of the impl
   |
LL | struct S<T, T>(T);
   |           +++

error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-26262.rs:17:6
   |
LL | impl<'a,T: Trait2<'a>> Trait1<<T as Trait2<'a>>::Foo> for T {
   |      ^^ unconstrained lifetime parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
